--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-<h2>Política de privacidade para <a href='http://github.com/edunsouza/communicator'>TCC Graph API</a></h2>
-<p>Todas as suas informações pessoais recolhidas, serão usadas para o ajudar a tornar a sua visita no nosso site o mais
-    produtiva e agradável possível.</p>
-<p>A garantia da confidencialidade dos dados pessoais dos utilizadores do nosso site é importante para o TCC Graph API.</p>
-<p>Todas as informações pessoais relativas a membros, assinantes, clientes ou visitantes que usem o TCC Graph API serão
-    tratadas em concordância com a Lei da Proteção de Dados Pessoais de 26 de outubro de 1998 (Lei n.º 67/98).</p>
-<p>A informação pessoal recolhida pode incluir o seu nome, e-mail, número de telefone e/ou telemóvel, morada, data de
-    nascimento e/ou outros.</p>
-<p>O uso do TCC Graph API pressupõe a aceitação deste Acordo de privacidade. A equipa do TCC Graph API reserva-se ao
+<h2>Política de privacidade para <a href='http://github.com/edunsouza/communicator'>TCC - Graph API</a></h2>
+
+<p>Todas as suas informações pessoais recolhidas, serão usadas para o ajudar a tornar a sua visita no nosso perfil do Facebook mais produtiva e agradável.</p>
+<p>A garantia da confidencialidade dos dados pessoais dos utilizadores do nosso site é importante para o TCC - Graph API.</p>
+
+<p>Todas as informações pessoais relativas a membros, assinantes, clientes ou visitantes que usem o TCC - Graph API serão
+tratadas em concordância com a Lei da Proteção de Dados Pessoais de 26 de outubro de 1998 (Lei n.º 67/98).</p>
+
+<p>A informação pessoal recolhida pode incluir o <b>seu nome</b> e sua <b>descrição de biografia no Facebook</b>.</p>
+
+<p>O uso do TCC - Graph API pressupõe a aceitação deste Acordo de privacidade. O autor do TCC - Graph API reserva-se ao
     direito de alterar este acordo sem aviso prévio. Deste modo, recomendamos que consulte a nossa política de
     privacidade com regularidade de forma a estar sempre atualizado.</p>
-<h2>Os anúncios</h2>
-<p>Tal como outros websites, coletamos e utilizamos informação contida nos anúncios. A informação contida nos anúncios,
-    inclui o seu endereço IP (Internet Protocol), o seu ISP (Internet Service Provider, como o Sapo, Clix, ou outro), o
-    browser que utilizou ao visitar o nosso website (como o Internet Explorer ou o Firefox), o tempo da sua visita e
-    que páginas visitou dentro do nosso website.</p>
+
+<h2>As publicações</h2>
+<p>As publicações recolhidas são apenas utilizadas para a apresentação de Trabalho de Conclusão de Curso
+    na feira da semana acadêmica da Faculdade Fatec Senai Porto Alegre.</p>
+
+<h2>Expiração</h2>
+<p>Este projeto é voltado apenas para construção e apresentação do Trabalho de Conclusão de Curso para obter
+    o título de Tecnólogo em Análise e Desenvolvimento de Sistemas</p>
+
 <h2>Ligações a Sites de terceiros</h2>
-<p>O TCC Graph API possui ligações para outros sites, os quais, a nosso ver, podem conter informações / ferramentas
-    úteis para os nossos visitantes. A nossa política de privacidade não é aplicada a sites de terceiros, pelo que,
-    caso visite outro site a partir do nosso deverá ler a politica de privacidade do mesmo.</p>
-<p>Não nos responsabilizamos pela política de privacidade ou conteúdo presente nesses mesmos sites.</p>
+<p>O TCC - Graph API <b>não</b> possui ligações com outros sites, apenas o Facebook.</p>
