--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ tratadas em concordância com a Lei da Proteção de Dados Pessoais de 26 de out
 
 <h2>Expiração</h2>
 <p>Este projeto é voltado apenas para construção e apresentação do Trabalho de Conclusão de Curso para obter
-    o título de Tecnólogo em Análise e Desenvolvimento de Sistemas</p>
+    o título de Tecnólogo em Análise e Desenvolvimento de Sistemas, com fechamento em 15 de Dezembro de 2018</p>
 
 <h2>Ligações a Sites de terceiros</h2>
 <p>O TCC - Graph API <b>não</b> possui ligações com outros sites, apenas o Facebook.</p>
